samples/_failures_safe/1761045446_af0ee2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b9e9b86.c: In function ‘main’:
./samples/SAFE/__tmp_6b9e9b86.c:161: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_6b9e9b86.c:160:5: error: expected declaration or statement at end of input
  160 |     if
      |     ^~
